# moonlight-uwp-launcher

./: Cargo.toml  README.md
lnk_parser-master/: Cargo.toml
src/: app.rs  main.rs
winparsingtools-master/src/structs/shell_items/: mod.rs
